Fix overlapping navbar dropdown.

--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,7 @@ p {
 
 .navbar {
 	position: relative;
+	z-index: 100;
 	background-color: #12487E;
 	height: 130px;
 	border: 0px;
